Fix text wrapping
Now new messages no longer use a textarea with wrap=hard. The display of
messages is changed to no longer use <pre> but a div with a monospace
font and white-space: pre-wrap.

--- a/html/style.css
+++ b/html/style.css
@@ -141,6 +141,27 @@ td.content {
   width: 100%;
 }
 
+td.content div.prewrap {
+  font-family: monospace;
+  white-space: pre-wrap;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+td.content div.prewrap div.attachment {
+  margin-top: 12px;
+  margin-left: 20px;
+  border-left: 1px solid #CCC;
+  padding-left: 5px;
+}
+
+td.content div.prewrap a.toggle {
+  text-decoration: none;
+  border: 1px solid #CCC;
+  border-radius: 2px;
+  padding: 3px;
+}
+
 td.date, th.date {
   white-space: nowrap;
 }
